--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ts-node": "^9.1.1",
+    "commander": "^7.2.0",
+    "moment": "^2.29.1",
     "typescript": "^4.2.4",
     "vuepress": "^1.8.2",
     "vuepress-plugin-typescript": "^0.3.1",
