--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "commander": "^7.2.0",
     "moment": "^2.29.1",
     "typescript": "^4.2.4",
+    "vue-property-decorator": "^9.1.2",
     "vuepress": "^1.8.2",
     "vuepress-plugin-typescript": "^0.3.1",
     "vuepress-types": "^0.9.4"
